# AuraEdit

./: .gitignore  README.md  implementation_plan.md
mediapipe_wrapper/: BUILD  CMakeLists.txt  MediaPipeBridge.cpp  MediaPipeBridge.h  WORKSPACE
qt_app/: CMakeLists.txt
qt_app/resources/: resources.qrc
qt_app/resources/ui/: editor.html  qwebchannel.js
qt_app/src/: AppController.cpp  AppController.h  GLImageWidget.cpp  GLImageWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
